[gd_scene load_steps=2 format=3 uid="uid://d3ndnj5fanp1q"]

[ext_resource type="Script" uid="uid://dodjunt1yb0yg" path="res://scripts/customization_panel.gd" id="1_ub2s5"]

[node name="CustomizationPanel" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_ub2s5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SkinColorSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SkinColorSection"]
layout_mode = 2
text = "Skin Color"

[node name="SkinColorPicker" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/SkinColorSection"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
focus_mode = 0

[node name="HairSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HairSection"]
layout_mode = 2
text = "Hair Color and Style"

[node name="HairColorPicker" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/HairSection"]
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
focus_mode = 0

[node name="HairStyleOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/HairSection"]
layout_mode = 2

[node name="ShirtSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ShirtSection"]
layout_mode = 2
text = "Shirt Color and Style"

[node name="ShirtColorPicker" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ShirtSection"]
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
focus_mode = 0

[node name="ShirtStyleOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ShirtSection"]
layout_mode = 2

[node name="JacketSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/JacketSection"]
layout_mode = 2
text = "Jakcet Color and Style"

[node name="JacketColorPicker" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/JacketSection"]
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
focus_mode = 0

[node name="JacketStyleOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/JacketSection"]
layout_mode = 2

[node name="PantsSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PantsSection"]
layout_mode = 2
text = "Pants Color and Style"

[node name="PantsColorPicker" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/PantsSection"]
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
focus_mode = 0

[node name="PantsStyleOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/PantsSection"]
layout_mode = 2

[node name="ShoesSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ShoesSection"]
layout_mode = 2
text = "Shoes Color and Style"

[node name="ShoesColorPicker" type="ColorPickerButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ShoesSection"]
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
focus_mode = 0

[node name="ShoesStyleOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ShoesSection"]
layout_mode = 2

[node name="ZoomSection" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ZoomSection"]
layout_mode = 2
text = "Camera Zoom"

[node name="ZoomSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/ZoomSection"]
layout_mode = 2
min_value = 1.0
max_value = 4.0
step = 0.1
value = 3.0

[node name="HboxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RandomizeButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HboxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Randomize"

[node name="ResetButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HboxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SkinColorSection/SkinColorPicker" to="." method="_on_skin_color_picker_color_changed"]
[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HairSection/HairColorPicker" to="." method="_on_hair_color_picker_color_changed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/HairSection/HairStyleOption" to="." method="_on_hair_style_option_item_selected"]
[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ShirtSection/ShirtColorPicker" to="." method="_on_shirt_color_picker_color_changed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/ShirtSection/ShirtStyleOption" to="." method="_on_shirt_style_option_item_selected"]
[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/JacketSection/JacketColorPicker" to="." method="_on_jacket_color_picker_color_changed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/JacketSection/JacketStyleOption" to="." method="_on_jacket_style_option_item_selected"]
[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/PantsSection/PantsColorPicker" to="." method="_on_pants_color_picker_color_changed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/PantsSection/PantsStyleOption" to="." method="_on_pants_style_option_item_selected"]
[connection signal="color_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ShoesSection/ShoesColorPicker" to="." method="_on_shoes_color_picker_color_changed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/ShoesSection/ShoesStyleOption" to="." method="_on_shoes_style_option_item_selected"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/ZoomSection/ZoomSlider" to="." method="_on_zoom_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HboxContainer/RandomizeButton" to="." method="_on_randomize_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HboxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
